# CreativeNewEraSlides

./:  GitHub Actions CI  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PyInstaller⁄AppImage  README.md  SECURITY.md  controllers_main_controller.py  main.py  pyproject.toml  readme.md  requirements.txt  run.sh  setup_models.py  suggestions.txt  test_fixes.py  utils_errors.py  utils_settings_and_model_manager.py  workers_image_and_video_workers.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/.github/workflows/: ci.yml
.github/.github/workflows/.github/workflows/: release.yml
.github/.github/workflows/.github/workflows/.github/workflows/: codeql-analysis.yml
.github/.github/workflows/.github/workflows/.github/workflows/.github/ISSUE_TEMPLATE/: bug_report.md
.github/.github/workflows/.github/workflows/.github/workflows/.github/ISSUE_TEMPLATE/.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
controllers/: __init__.py  main_controller.py
scripts/: README.md
tests/: conftest.py  test_errors.py  test_main_controller.py  test_model_manager.py  test_settings_manager.py  test_workers.py
ui/: main_window.py
utils/: __init__.py  errors.py  logging_config.py  model_downloader.py  model_manager.py  settings_manager.py
workers/: image_and_video_workers.py  params.py
