[project]
name = "creative-new-era-slides"
version = "0.1.0"
description = "Creative New Era Slides"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "diffusers>=0.30.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "flake8==7.3.0",
    "black==25.1.0",
    "mypy==1.17.1",
]

[tool.setuptools.packages.find]
include = ["controllers", "utils", "workers", "ui"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
